create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3297,6 +3297,754 @@ body {
     flex-shrink: 0;
   }
 }
+.cid-qJE5abEFJq {
+  background: #ffffff;
+}
+.cid-qJE5abEFJq .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5abEFJq .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5abEFJq figcaption {
+  position: relative;
+}
+.cid-qJE5abEFJq figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5abEFJq .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5agCDbP {
+  background: #ffffff;
+}
+.cid-qJE5agCDbP .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5agCDbP .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5agCDbP figcaption {
+  position: relative;
+}
+.cid-qJE5agCDbP figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5agCDbP .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5abPXyy {
+  background: #ffffff;
+}
+.cid-qJE5abPXyy .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5abPXyy .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5abPXyy figcaption {
+  position: relative;
+}
+.cid-qJE5abPXyy figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5abPXyy .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5abZZ7v {
+  background: #ffffff;
+}
+.cid-qJE5abZZ7v .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5abZZ7v .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5abZZ7v figcaption {
+  position: relative;
+}
+.cid-qJE5abZZ7v figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5abZZ7v .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5ac7otj {
+  background: #ffffff;
+}
+.cid-qJE5ac7otj .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5ac7otj .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5ac7otj figcaption {
+  position: relative;
+}
+.cid-qJE5ac7otj figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5ac7otj .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5acft1y {
+  background: #ffffff;
+}
+.cid-qJE5acft1y .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5acft1y .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5acft1y figcaption {
+  position: relative;
+}
+.cid-qJE5acft1y figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5acft1y .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5acmJjs {
+  background: #ffffff;
+}
+.cid-qJE5acmJjs .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5acmJjs .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5acmJjs figcaption {
+  position: relative;
+}
+.cid-qJE5acmJjs figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5acmJjs .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5acuCK9 {
+  background: #ffffff;
+}
+.cid-qJE5acuCK9 .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5acuCK9 .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5acuCK9 figcaption {
+  position: relative;
+}
+.cid-qJE5acuCK9 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5acuCK9 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bFgq9q {
+  background: #ffffff;
+}
+.cid-qJE5bFgq9q .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bFgq9q .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bFgq9q figcaption {
+  position: relative;
+}
+.cid-qJE5bFgq9q figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bFgq9q .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bFAxaJ {
+  background: #ffffff;
+}
+.cid-qJE5bFAxaJ .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bFAxaJ .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bFAxaJ figcaption {
+  position: relative;
+}
+.cid-qJE5bFAxaJ figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bFAxaJ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bFSefP {
+  background: #ffffff;
+}
+.cid-qJE5bFSefP .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bFSefP .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bFSefP figcaption {
+  position: relative;
+}
+.cid-qJE5bFSefP figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bFSefP .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bG4qiQ {
+  background: #ffffff;
+}
+.cid-qJE5bG4qiQ .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bG4qiQ .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bG4qiQ figcaption {
+  position: relative;
+}
+.cid-qJE5bG4qiQ figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bG4qiQ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bGf2Fn {
+  background: #ffffff;
+}
+.cid-qJE5bGf2Fn .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bGf2Fn .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bGf2Fn figcaption {
+  position: relative;
+}
+.cid-qJE5bGf2Fn figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bGf2Fn .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bGoa3g {
+  background: #ffffff;
+}
+.cid-qJE5bGoa3g .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bGoa3g .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bGoa3g figcaption {
+  position: relative;
+}
+.cid-qJE5bGoa3g figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bGoa3g .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bGCKVv {
+  background: #ffffff;
+}
+.cid-qJE5bGCKVv .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bGCKVv .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bGCKVv figcaption {
+  position: relative;
+}
+.cid-qJE5bGCKVv figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bGCKVv .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bGM7mJ {
+  background: #ffffff;
+}
+.cid-qJE5bGM7mJ .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bGM7mJ .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bGM7mJ figcaption {
+  position: relative;
+}
+.cid-qJE5bGM7mJ figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bGM7mJ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bGUMK3 {
+  background: #ffffff;
+}
+.cid-qJE5bGUMK3 .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bGUMK3 .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bGUMK3 figcaption {
+  position: relative;
+}
+.cid-qJE5bGUMK3 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bGUMK3 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5bH2mTo {
+  background: #ffffff;
+}
+.cid-qJE5bH2mTo .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5bH2mTo .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5bH2mTo figcaption {
+  position: relative;
+}
+.cid-qJE5bH2mTo figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5bH2mTo .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5acCQed {
+  background: #ffffff;
+}
+.cid-qJE5acCQed .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5acCQed .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5acCQed figcaption {
+  position: relative;
+}
+.cid-qJE5acCQed figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5acCQed .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5acO4og {
+  background: #ffffff;
+}
+.cid-qJE5acO4og .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qJE5acO4og .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5acO4og figcaption {
+  position: relative;
+}
+.cid-qJE5acO4og figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5acO4og .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5iQhO7j {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5iQhO7j .image-block {
+  margin: auto;
+}
+.cid-qJE5iQhO7j .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5iQhO7j figcaption {
+  position: relative;
+}
+.cid-qJE5iQhO7j figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5iQhO7j .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5j7XUpN {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5j7XUpN .image-block {
+  margin: auto;
+}
+.cid-qJE5j7XUpN .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5j7XUpN figcaption {
+  position: relative;
+}
+.cid-qJE5j7XUpN figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5j7XUpN .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5jl9Fml {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5jl9Fml .image-block {
+  margin: auto;
+}
+.cid-qJE5jl9Fml .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5jl9Fml figcaption {
+  position: relative;
+}
+.cid-qJE5jl9Fml figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5jl9Fml .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5jAaEX3 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5jAaEX3 .image-block {
+  margin: auto;
+}
+.cid-qJE5jAaEX3 .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5jAaEX3 figcaption {
+  position: relative;
+}
+.cid-qJE5jAaEX3 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5jAaEX3 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5jQChUr {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5jQChUr .image-block {
+  margin: auto;
+}
+.cid-qJE5jQChUr .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5jQChUr figcaption {
+  position: relative;
+}
+.cid-qJE5jQChUr figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5jQChUr .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5k7Xcac {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5k7Xcac .image-block {
+  margin: auto;
+}
+.cid-qJE5k7Xcac .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5k7Xcac figcaption {
+  position: relative;
+}
+.cid-qJE5k7Xcac figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5k7Xcac .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5kEWn7C {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5kEWn7C .image-block {
+  margin: auto;
+}
+.cid-qJE5kEWn7C .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5kEWn7C figcaption {
+  position: relative;
+}
+.cid-qJE5kEWn7C figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5kEWn7C .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5JaVkTf {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5JaVkTf .image-block {
+  margin: auto;
+}
+.cid-qJE5JaVkTf .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5JaVkTf figcaption {
+  position: relative;
+}
+.cid-qJE5JaVkTf figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5JaVkTf .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5JrnzJ6 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5JrnzJ6 .image-block {
+  margin: auto;
+}
+.cid-qJE5JrnzJ6 .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5JrnzJ6 figcaption {
+  position: relative;
+}
+.cid-qJE5JrnzJ6 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5JrnzJ6 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5JIG9Tc {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5JIG9Tc .image-block {
+  margin: auto;
+}
+.cid-qJE5JIG9Tc .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5JIG9Tc figcaption {
+  position: relative;
+}
+.cid-qJE5JIG9Tc figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5JIG9Tc .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5VHfRg8 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5VHfRg8 .image-block {
+  margin: auto;
+}
+.cid-qJE5VHfRg8 .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5VHfRg8 figcaption {
+  position: relative;
+}
+.cid-qJE5VHfRg8 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5VHfRg8 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qJE5Yxlt79 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #efefef;
+}
+.cid-qJE5Yxlt79 .image-block {
+  margin: auto;
+}
+.cid-qJE5Yxlt79 .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qJE5Yxlt79 figcaption {
+  position: relative;
+}
+.cid-qJE5Yxlt79 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qJE5Yxlt79 .image-block {
+    width: 100% !important;
+  }
+}
 .cid-qJDJa0Cuhw .navbar {
   background: #ffffff;
   transition: none;
